Model framework 생성

--- a/Tweeeter.xcodeproj/xcshareddata/xcschemes/Tweeeter.xcscheme
+++ b/Tweeeter.xcodeproj/xcshareddata/xcschemes/Tweeeter.xcscheme
@@ -48,6 +48,16 @@
                ReferencedContainer = "container:Tweeeter.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4172880921C5607C00A7F6B8"
+               BuildableName = "ModelTests.xctest"
+               BlueprintName = "ModelTests"
+               ReferencedContainer = "container:Tweeeter.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
